11175 libm should use signbit() correctly 11188 c99 math macros should return strictly backward compatible values Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Dan McDonald <danmcd@joyent.com>